# rust-actix-crud-app

./: .env-sample  .env_docker  Dockerfile  README.md  docker-compose.yaml
actix-api/: Cargo.toml
actix-api/src/: action.rs  db.rs  main.rs  models.rs
scripts/: build.sh
