[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.1.0" }
dotenvy = "0.15"
serde_json = "1.0.81"
serde = { version = "1.0.37", features = ["derive"]}